--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,6 @@
 {
-  "plugins": ["prettier"],
-  "rules": {
-    "camelcase": 0,
-    "linebreak-style": 0,
-    "max-len": ["error", { "code": 120 }],
-    "quotes": ["error", "backtick"],
-    "prettier/prettier": "error"
-  }
+  "arrowParens": "always",
+  "singleQuote": true,
+  "printWidth": 120,
+  "trailingComma": "all"
 }
