--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "socket.io-client": "^2.2.0",
     "typeface-roboto": "0.0.54"
   },
