--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "moment": "^2.24.0",
+    "psl": "^1.1.31",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
