--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "socket.io-client": "^2.2.0",
     "typeface-roboto": "0.0.54"
   },
