--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm start --prefix web\" ",
+    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm start --prefix web\"",
+    "build": "npm run build --prefix web && node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
+    "fs-extra": "^8.0.1",
     "prettier": "^1.17.0"
   }
 }
