--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsdom": "^15.1.0",
     "socket.io": "^2.2.0",
     "yargs": "^13.2.4"
   }
