--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "concurrently": "^4.1.2",
     "eslint": "^6.2.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "fs-extra": "^8.1.0",
     "prettier": "^1.18.2"
   }
